1. 完成tensorflow 2包名的替换;2.修改data generator，完成一个关键的修改，把返回值从list改为tuple以符合keras的fit_generator的要求。

--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,5 @@ ENV/
 
 # Ignore any files and directories that begin with the word "local"
 local*
+dataset_udacity_traffic_train.h5
+dataset_udacity_traffic_val.h5
